--- a/index.html
+++ b/index.html
@@ -16,12 +16,42 @@
 </head>
 <body>
 <section id="main">
+    <img src="img/planet.png" class="image1">
     <div class="main-block">
+        <img src="img/maskot.png" width="125">
+        <div class="main-content">
+            <h1 class="main-title"> Даниил Водолаз </h1>
+            <p class="main-subtitle">
+                личная страница разработчика
+            </p>
+        </div>
+        <div class="button">
+            <a href="#">Подробнее</a>
+        </div>
+    </div>
+    <div class="moving-planet">
 
     </div>
 </section>
 <section id="about">
+    <h1 class="title">ОБО МНЕ</h1>
     <div class="about-block">
+        <div class="about-content">
+            <div class="about-text">
+                <p class="about-title"> Меня зовут Даниил. Я занимаюсб разработкой современных сайтов и приложений. <br></br> Мне нравится создавать интересные и современные проекты.</p>
+                <div class="button">
+                    <a href="#">Мои навыки</a>
+                </div>
+            </div>
+            <div class="about-card">
+                <img src="img/photo1.png">
+                <p>Где живу: Калгари</p>
+                <p>Возраст: 18</p>
+                <p>Дата рождения: 16.12.2006</p>
+            </div>
+        </div>
+    </div>
+    <div class="moving-cloud">
 
     </div>
 </section>
