--- a/index.html
+++ b/index.html
@@ -56,18 +56,50 @@
     </div>
 </section>
 <section id="skills">
+    <h1 class="title">НАВЫКИ</h1>
     <div class="skills-block">
-
+        <div class="skills-card">
+            <p> Этот сайт я сделал в рамках обучения школы Rocket Tech School</p>
+            <div class="languages">
+                <img src="img/html.png" width="70">
+                <img src="img/css.png" width="70">
+                <img src="img/js.png" width="70">
+            </div>
+            <div class="button">
+                <a href="#">Смотреть работы</a>
+            </div>
+        </div>
     </div>
 </section>
 <section id="works">
+    <h1 class="title">РАБОТЫ</h1>
     <div class="works-block">
-
+        <img src="img/work1.png">
+        <img src="img/work2.png">
+        <img src="img/work3.png">
     </div>
 </section>
 <section id="comments">
+    <h1 class="title">ОТЗЫВЫ</h1>
     <div class="comments-block">
-
+        <div class="comment-card">
+            <img src="img/photo1.png">
+            <h3>Владимир</h3>
+            <p>Основатель Rocket Tech School</p>
+        </div>
+        <div class="comment">
+            <p>Этот мальчик проходил обучение веб разроботке 4 месяца, и уже создает сложные сайты!</p>
+        </div>
+        <div class="comment-card">
+            <img src="img/photo2.png">
+            <h3>Диана</h3>
+            <p>Product Lead Rocket Tech School</p>
+        </div>
+        <div class="comment">
+            <p>
+                Очень хорошо пишет код. Отличная опртимизация сайта. Современно, стильно, молодежно!
+            </p>
+        </div>
     </div>
 </section>
 </body>
