--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     <title>Document</title>
 </head>
 <body>
+<nav>
+    <div class="fixed-menu">
+        <h1 class="logo">DK</h1>
+        <div class="nav-links">
+            <a class="nav-link main-link active" href="#main">Главная</a>
+            <a class="nav-link about-link" href="#about">Обо мне</a>
+            <a class="nav-link skills-link" href="#skills">Навыки</a>
+            <a class="nav-link works-link" href="#works">Работы</a>
+            <a class="nav-link comments-link" href="#comments">Отзывы</a>
+        </div>
+    </div>
+</nav>
 <section id="main">
     <img src="img/planet.png" class="image1">
     <div class="main-block">
@@ -102,6 +114,26 @@
         </div>
     </div>
 </section>
+<footer>
+    <div class="footer-info">
+        <p>Даниил Водолаз</p>
+        <p>Личный сайт веб разработчика</p>
+    </div>
+    <div class="footer=year">
+        <p> 2025</p>
+    </div>
+    <div class="footer-links">
+        <a href="#">
+            <img src="">
+        </a>
+        <a href="#">
+            <img src="">
+        </a>
+        <a href="#">
+            <img src="">
+        </a>
+    </div>
+</footer>
 </body>
 <script src="script.js"> </script>
 </html>
